--- a/src/Pages/Results.css
+++ b/src/Pages/Results.css
@@ -14,6 +14,7 @@
     flex-wrap: wrap;
     overflow-y: scroll;
     gap: 1em;
+    padding-bottom: 1em;
 }
 .resultsCards::-webkit-scrollbar {
     display: none;
